--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,19 @@ nav a {
 body {
     background-color: #fc0e0e;
 }
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px; /* Adjust the margin as needed */
+}
+
+.image-container a {
+    margin: 0 20px; /* Adjust the space between images */
+}
+
+.image-container img {
+    width: 315px; /* Adjust the width of each image */
+    border-radius: 8px; /* Optional: add border radius for rounded corners */
+    cursor: pointer;
+}
