--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     background-color: #fc0e0e;
     color: #ffff00;
+    font-family: Lato, sans-serif;
 }
 
 .yellow-header {
