--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,17 +43,17 @@ nav a {
     align-items: center;
 }
 
+nav ul li a.active {
+    color: #fc0e0e; /* Set the color for the active link */
+    /* Add any other styles to highlight the active link */
+}
+
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
 
   }
-
-nav a.active {
-    color: #fc0e0e; /* Set the color for the active link */
-    /* Add any other styles to highlight the active link */
-}
 
 /* Apply red background to all pages */
 #content {
